--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
+    <link
+      rel="shortcut icon"
+      href="../src/assets/favicon.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Dim3ak</title>
   </head>
   <body>
     <div id="root"></div>
