--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <link
       rel="shortcut icon"
-      href="../src/assets/favicon.ico"
+      href="%PUBLIC_URL%/favicon.ico"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="" />
